--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     },
     "autoload": {
         "psr-4": {
-            "defyma\\": ""
+            "defyma\\helper\\": ""
         }
     },
 	"minimum-stability": "dev",
     "prefer-stable": true,
 	"branch-alias": {
-            "dev-master": "1.1.x-dev"
+            "dev-master": "1.x-dev"
     }
 }
